feat: add Draw text centered API